# doc/api.yaml
@@ -430,8 +430,15 @@ components:
       description: "This object represents a single message"
       type: object
       properties:
+        senderName:
+          description: Name of message sender.
+          type: string
+          example: "Maria"
+          pattern: 'ˆ.*?$'
+          minLength: 3
+          maxLength: 16
         senderId:
-          description: Id of message sender.
+          description: ID of message sender.
           type: integer
           example: 12390739
           readOnly: true
